# ATOM

./: DOCUMENTATION_AUDIT_REPORT.html  README.md  architecture_guide.html  atom_overview_draft.md  bench.py  bench_qwen.sh  compilation_cudagraph_guide.html  configuration_guide.html  distributed_guide.html  environment_variables.html  example.py  genindex.html  index.html  installation.html  launch_qwen.sh  launch_qwen_atom.sh  launch_qwen_sglang.sh  model_ops_guide.html  model_support_guide.html  pyproject.toml  quickstart.html  scheduling_kv_cache_guide.html  search.html  searchindex.js  serving_benchmarking_guide.html  test.py  val_gsm8k.sh
.github/: runner-config.yml
_sources/: configuration_guide.md.txt  distributed_guide.md.txt  environment_variables.md.txt  index.rst.txt  model_support_guide.md.txt
api/: models.html  serving.html
atom/: __init__.py  config.py  quant_spec.py  sampling_params.py
docker/: Dockerfile  Dockerfile_For_OOT  Dockerfile_vllm_atom_oot  build_oot_docker.sh  build_vllm_atom_oot.sh
docs/: DOCUMENTATION_AUDIT_REPORT.html  architecture_guide.html  compilation_cudagraph_guide.html  configuration_guide.html  configuration_guide.md  distributed_guide.html  eagle3_speculative_decoding.html  environment_variables.html  environment_variables.md  genindex.html  index.html  installation.html  model_ops_guide.html  model_support_guide.html  model_support_guide.md  objects.inv  online_quantization_guide.html  quickstart.html  scheduling_kv_cache_guide.html  search.html  searchindex.js  serving_benchmarking_guide.html  (+1 more)
kernel-dashboard/: data.json  (+1 more)
(+348 files in other folders)
